style: fix responsiveness issues on mobile
Desenvolver a section principal #31

--- a/src/components/HeroSliderHomePage/styles.module.css
+++ b/src/components/HeroSliderHomePage/styles.module.css
@@ -1,6 +1,6 @@
 .heroSliderHomePageContainer {
   width: 100%;
-  height: 24.6rem;
+  height: 34.6rem;
   border: 0.2rem solid var(--brow-50);
   border-radius: 0.2rem;
 }
