--- a/src/components/Sections/HeroHomePage/styles.module.css
+++ b/src/components/Sections/HeroHomePage/styles.module.css
@@ -3,12 +3,15 @@
   flex-direction: column;
   align-items: center;
   padding: 0 2.4rem;
-  margin: 3.4rem 0 6rem;
+  margin: 10.6rem 0 6rem;
 }
 
 .heroHomePageContent {
-  margin: 1.4rem 0 2.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 84%;
+  margin: 1.4rem 0 2.6rem;
 }
 
 .heroHomePageTitle {
@@ -22,6 +25,7 @@
 }
 
 .heroHomePageDescription {
+  margin: 0.8rem 0 1.6rem;
   font-family: var(--poppins-font);
   font-size: 1.6rem;
   line-height: 2.6rem;
@@ -32,7 +36,7 @@
 
 .heroHomePageButtonContainer {
   display: flex;
-  width: 20rem;
+  width: 22.6rem;
   justify-content: center;
   align-items: center;
   border-radius: 1.2rem;
@@ -40,9 +44,9 @@
 }
 
 .heroHomePageButton {
-  padding: 1.2rem 6rem;
+  padding: 1.2rem 5rem;
   font-family: var(--poppins-font);
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 600;
   text-align: center;
   color: var(--white);
@@ -62,9 +66,6 @@
   }
 
   .heroHomePageContent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 32.4rem;
   }
 
@@ -85,7 +86,6 @@
   }
 
   .heroHomePageButton {
-    font-size: 1.6rem;
     line-height: 2.6rem;
   }
 }
